--- a/node_test_v1/views/lecturerMultipleQuiz.ejs
+++ b/node_test_v1/views/lecturerMultipleQuiz.ejs
@@ -110,7 +110,7 @@
               <% q.options.forEach((opt, optIndex) => { %>
               <div>
 <label class="text-gray-300 text-sm mb-1" for="option-<%= index %>-<%= optIndex %>">
-  <%= optIndex === 0 ? "Correct Answer" : `Incorrect Answer ${optIndex}` %>:
+  <%= optIndex === 0 ? "Correct Answer" : `Clue ${optIndex}` %>:
 </label>
                 <input 
                   type="text" 
@@ -214,16 +214,20 @@ document.addEventListener("DOMContentLoaded", () => {
           <input type="text" name="questions[${index}][options][0]" id="option-${index}-0" class="w-full p-2 rounded-md bg-gray-700 text-white"/>
         </div>
         <div>
-          <label class="text-gray-300 text-sm mb-1" for="option-${index}-1">Incorrect Answer 1:</label>
+          <label class="text-gray-300 text-sm mb-1" for="option-${index}-1">Clue 1:</label>
           <input type="text" name="questions[${index}][options][1]" id="option-${index}-1" class="w-full p-2 rounded-md bg-gray-700 text-white"/>
         </div>
         <div>
-          <label class="text-gray-300 text-sm mb-1" for="option-${index}-2">Incorrect Answer 2:</label>
+          <label class="text-gray-300 text-sm mb-1" for="option-${index}-2">Clue 2:</label>
           <input type="text" name="questions[${index}][options][2]" id="option-${index}-2" class="w-full p-2 rounded-md bg-gray-700 text-white"/>
         </div>
         <div>
-          <label class="text-gray-300 text-sm mb-1" for="option-${index}-3">Incorrect Answer 3:</label>
+          <label class="text-gray-300 text-sm mb-1" for="option-${index}-3">Clue 3:</label>
           <input type="text" name="questions[${index}][options][3]" id="option-${index}-3" class="w-full p-2 rounded-md bg-gray-700 text-white"/>
+        </div>
+        <div>
+          <label class="text-gray-300 text-sm mb-1" for="option-${index}-4">Clue 4:</label>
+          <input type="text" name="questions[${index}][options][4]" id="option-${index}-4" class="w-full p-2 rounded-md bg-gray-700 text-white"/>
         </div>
       </div>
     `;
